# thesis_work

./: .gitmodules  .pylintrc  icp_demo.py  robot_3d.sdf  robot_3d.urdf
camera_description/: CMakeLists.txt  package.xml
camera_description/launch/: check_urdf.launch.py  robot_state_publisher.launch.py
camera_description/models/astrobee_handrail_8_5/: spawn.sdf
camera_description/models/points/: model.config
camera_description/models/points/meshes/: points.dae
camera_description/rviz/: camera_description.rviz
camera_description/urdf/control/: camera_control.gazebo
camera_description/urdf/mech/: mecanum_wheel.urdf.xacro  robot_3d_base.urdf.xacro
camera_description/urdf/robots/: robot_3d.urdf.xacro
camera_description/urdf/sensors/: kinectv2.urdf.xacro  rgbd_camera.urdf.xacro
docker/: .env  Dockerfile  Dockerfile.old  Dockerfile_px4  docker-compose.yaml
gazebo_camera_sim/: CMakeLists.txt  package.xml
gazebo_camera_sim/include/gazebo_camera_sim/: six_dof_velocity_control.hh
gazebo_camera_sim/launch/: check_urdf.launch.py  pose_estimation.launch.py  pose_estimation_launch.py  px4_mpc.launch.py  spawn_robot.launch.py  world.launch.py
gazebo_camera_sim/models/: handrail_8_5.dae  model.sdf
gazebo_camera_sim/src/: six_dof_velocity_control.cc
gazebo_camera_sim/worlds/: default.sdf  sensor_tur.sdf  world.sdf  world_cam.sdf  world_cam_handrail.sdf  world_cam_v2.sdf
go_icp_vendor/: CMakeLists.txt  package.xml
ibvs_testing/: package.xml  setup.cfg  setup.py
ibvs_testing/ibvs_testing/: IBVS_backup.py  ORB_test.py  SIFT.py  analyse_reference.py  detect_features.py  detect_points.py  image_viewer copy.py  image_viewer.py
ibvs_testing/launch/: ibvs_launch.py
ibvs_testing/scripts/: ibvs_node.py
pose_estimation/: package.xml  setup.py
pose_estimation/launch/: launch_rviz.launch.py
pose_estimation/pose_estimation/: pnp_tracker_node.py  pose_estimation_node.py  pose_estimation_tools.py
pose_estimation/pose_estimation/icp_testing/: go_icp.py  go_icp_backup.py  icp.py  icp_umeyama.py  icp_visualizer.py  pnp_tracker.py  pnp_tracker_ui.py
pose_estimation/pose_estimation/tools/: conversion.py  pc_utils.py  plane_detector.py  pose_estimation_tools.py  tf_utils.py  visualizer.py
pose_estimation/rviz/: rviz.rviz
pose_estimation_pcl/: CMakeLists.txt  package.xml
pose_estimation_pcl/config/: pose_estimation_config.yaml
pose_estimation_pcl/include/pose_estimation_pcl/: cloud_preprocess.hpp  clustering.hpp  go_icp_wrapper.hpp  pcl_utils.hpp  plane_segmentation.hpp  ros_utils.hpp
pose_estimation_pcl/include/pose_estimation_pcl/utils/: pcl_utils.hpp
pose_estimation_pcl/launch/: run_pose_estimation.launch.py
pose_estimation_pcl/src/: cloud_preprocess.cpp  clustering.cpp  go_icp_registration.cpp  go_icp_wrapper.cpp  pcl_utils.cpp  plane_segmentation.cpp  pose_estimation_pcl.cpp  ros_utils.cpp
pose_estimation_pcl/src/utils/: calc_pose_error.py  model_to_pcd.py  pcl_utils.cpp  ros_utils.cpp
tf_handler/: package.xml  setup.cfg  setup.py
tf_handler/src/: gz_pose_transform.py
tf_handler/tf_handler/: gz_pose_transform.py
velocity_command/: package.xml  setup.cfg  setup.py
velocity_command/velocity_command/: velocity_cmd.py
